--- a/tallerRmarkdown-IPOEnero2022/taller-reprod-enero2022.Rmd
+++ b/tallerRmarkdown-IPOEnero2022/taller-reprod-enero2022.Rmd
@@ -947,7 +947,7 @@ class: inverse
 ## Abriendo la sesión de RStudio como proyecto
 
 <br>
-- identificar en la carpeta respectiva el archibo .Rproj
+- identificar en la carpeta respectiva el archivo .Rproj
 
 - ejecutar y se abre R / RStudio desde ese directorio como raíz
 
