--- a/tallerShiny-Enero2022/taller-shiny-enero2022.Rmd
+++ b/tallerShiny-Enero2022/taller-shiny-enero2022.Rmd
@@ -136,11 +136,20 @@ _Data graphics visually display measures quantities by means of the combine use 
 
 Una buena visualización debe:
 
+--
+
 - inducir al observador a centrarse en lo substantivo 
+
+--
 
 - evitar distorsiones (e.g. ejes o magnitudes)
 
+--
+
 - claridad de su objetivo: descripción, exploración, cuadros u ornamental 
+
+--
+
 - ser fiel a lo que dicen los datos
 
 ---
@@ -154,7 +163,10 @@ $$\text{Factor mentira} = \frac{\text{tamaño del efecto mostrado}}{\text{tamañ
 
 
 ---
-class: middle, center
+class: center
+
+.small[.left[En una escala de 1 a 5 ¿Cuál es la proporción de impuestos que deberían pagar las personas de mayores ingresos?]]
+
 ![](tax-1.png)
 
 ---
@@ -294,9 +306,9 @@ server <- function(input, output) {
 
 .pull-left-narrow[
 
-* Renders: sirven para renderizar un output en creado en `server`
+* **Renders**: sirven para renderizar un output en creado en `server`
 
-* Outputs: sirven para mostrar el renderizado en el `ui`
+* **Outputs**: sirven para mostrar el renderizado en el `ui`
 
 ]
 .pull-right-wide[
@@ -316,11 +328,11 @@ server <- function(input, output) {
 
 Permite aagregar un input de checkbox para especificar qué datos se visualizan se muestran en una tabla
 
-1. ui: debes agregar un input widget (control) con el que el usuario pueda interactuar
+1. `ui`: debes agregar un input widget (control) con el que el usuario pueda interactuar
 
-2. ui: agregar un output definiendo la tabla y su posición
+2. `ui`: agregar un output definiendo la tabla y su posición
 
-3. server: agregar una reacción que crea una tabla .red[solo si] se pone en el checkbox
+3. `server`: agregar una reacción que crea una tabla .red[solo si] se pone en el checkbox
 
 ---
 class: middle
@@ -398,9 +410,9 @@ Para agregar una tabla de resuymen de estadísticos para una nueva variable `sco
 
 
 1. Calcular la nueva variable
-2. ui: agregar un box input para interactuar y seleccionar
-3. ui: agregar un output defininendo la tabla
-4. server: agregar un reactivo para que muestre la tabla
+2. `ui`: agregar un box input para interactuar y seleccionar
+3. `ui`: agregar un output defininendo la tabla
+4. `server`: agregar un reactivo para que muestre la tabla
 
 
 ---
@@ -510,8 +522,8 @@ shinyApp(ui = ui, server = server)
 .center[
 ![:scale 60%](https://shiny.rstudio.com/images/reactivity_diagrams/roles.png)
 ]
--- 
 
+--
 * evitan programar repetitivamente y encadenan procesos en `server`
 
 ---
@@ -525,7 +537,7 @@ shinyApp(ui = ui, server = server)
 
 * `Reactive endpoint`: algo que aparece en panel, como un gráfico, tabla o valores 
 
-* unn _source_ puede estar vinculado a múltiples _endpoints_, y viceversa
+* un _source_ puede estar vinculado a múltiples _endpoints_, y viceversa
 
 ---
 
@@ -583,7 +595,7 @@ output$scatterplot <- renderPlot({
 ]
 
 ---
-* ui & server: Usamos movie_subset() para hacer un print del número de observaciones
+* `ui` & `server`: Usamos movie_subset() para hacer un print del número de observaciones
 
 En ui:
 
@@ -598,7 +610,7 @@ mainPanel(
 
 ---
 
-En server:
+En `server`:
 .medium[
 
 ```{r echo=TRUE, eval=F}
@@ -612,9 +624,8 @@ output$n <- renderUI({
 
 ]
 
----
 
-```{r echo=TRUE, eval=F}
+```{r eval=FALSE, include=FALSE}
 ui <- fluidPage(
   # Sidebar layout con las definiciones de input y output
   sidebarLayout(
@@ -644,7 +655,7 @@ ui <- fluidPage(
 )
 ```
 
-```{r echo=TRUE, eval=F}
+```{r eval=FALSE, include=FALSE}
 # Define las funciones de server
 server <- function(input, output) {
   # Crea un scatter plot
@@ -771,7 +782,7 @@ shinyApp(ui, server)
 
 ---
 
-# Side bar
+# Sidebar
 
 .pull-left[
 * se utiliza normalmente para la navegación rápida. 
@@ -1027,11 +1038,17 @@ shinyApp(ui = ui, server = server)
 ---
 # Organizar la app
 
-
+--
 * En una carpeta se deben almacenar: código y datos
+--
+
 * Otros adcionales: archivos css, html, Rmarkdown
 
+--
+
 Sugerimos usar RStudio y crear un proyecto de una Shiny app:
+
+--
 
 ![:scale 100%](shiny4.PNG)
 
@@ -1130,6 +1147,13 @@ tictoc::toc() #término...
 ```
 
 ]
+
+---
+## Resultado
+
+<iframe src="https://juitsa.shinyapps.io/app-example/" width="100%" height="550" style="border:none;">
+
+
 ---
 class: inverse
 
@@ -1139,7 +1163,7 @@ class: inverse
 
 ### - Elaboración de una Shiny app
 
-### - Usar Shinydashboard para ui
+### - Usar Shinydashboard para interfaz
 
 ### - Publicar App en shinyapps.io
 
@@ -1179,9 +1203,10 @@ class: front middle
  # .red[**Introducción a la Visualización de Datos con Shiny**]
  
  .espaciosimple[
-.small[Julio Iturra - COES] / 
-.small[[coes.cl/julio-iturra/](https://coes.cl/integrantes/julio-iturra/)]
-
+.medium[Julio Iturra] <br>
+.small[Centro de Estudios de Conflicto y Cohesión Social]
+<br>
+.small[[coes.cl/julio-iturra](https://coes.cl/integrantes/julio-iturra/)]
 ]
 ]
 ]
