--- a/tallerShiny-Enero2022/taller-shiny-enero2022.Rmd
+++ b/tallerShiny-Enero2022/taller-shiny-enero2022.Rmd
@@ -221,7 +221,7 @@ Se sugiere:
 
 En general debes tener presente: 
 
-- **siempre** correr el script.R completo, por partes.
+- **siempre** correr el script.R completo, no por partes.
 
 - la mejor forma de saber dónde hay un error en el código en tu App
 
@@ -534,9 +534,7 @@ shinyApp(ui = ui, server = server)
 
 
 * `Reactive source`: el input que proviene de la interfaz de usuario o `ui`
-
 * `Reactive endpoint`: algo que aparece en panel, como un gráfico, tabla o valores 
-
 * un _source_ puede estar vinculado a múltiples _endpoints_, y viceversa
 
 ---
@@ -689,9 +687,7 @@ shinyApp(ui = ui, server = server)
 #  Reactlog
 
 * Cuando usamos muchas expresiones reactivas en una App, se pueden crear dependencias complicadas.
-
 * El reactlog es una representación gráfica de la estructura de dependencias, además entrega información detallada respecto de lo que está ocurriendo "tras bambalinas".
-
 * Para usar:
 
   1. En una sesion de R nueva, escribe : `options(shiny.reactlog = TRUE)`
