--- a/tallerShiny-Enero2022/taller-shiny-enero2022.Rmd
+++ b/tallerShiny-Enero2022/taller-shiny-enero2022.Rmd
@@ -326,7 +326,7 @@ server <- function(input, output) {
 ---
 # checkboxInput
 
-Permite aagregar un input de checkbox para especificar qué datos se visualizan se muestran en una tabla
+Permite agregar un input de checkbox para especificar qué datos se visualizan se muestran en una tabla
 
 1. `ui`: debes agregar un input widget (control) con el que el usuario pueda interactuar
 
@@ -1144,11 +1144,35 @@ tictoc::toc() #término...
 
 ]
 
+Revisar en:  https://juitsa.shinyapps.io/app-example/ 
+
+---
+# Incorporar una app
+
+* usando este código se puede incrustar en un documento html generado en R Markdown:
+
+.tiny[
+```{r echo=TRUE, eval=F}
+<iframe src="https://juitsa.shinyapps.io/app-example/" width="100%" height="550" style="border:none;">
+```
+]
+
+* Permite incorporar una app a un documento y visualizarlo directamente
 ---
 ## Resultado
 
 <iframe src="https://juitsa.shinyapps.io/app-example/" width="100%" height="550" style="border:none;">
 
+
+---
+# Algunas Apps
+
+
+- Aplicación de Visualización del Observatorio de Cohesión Social: https://juitsa.shinyapps.io/ocs-coes/
+
+- MOVID-19: https://www.movid19.cl/app 
+
+- Graficador del CEP: https://www.cepchile.cl/cep/site/edic/base/port/graficador.html
 
 ---
 class: inverse
