--- a/reprod-repos-Vale-Junio20203/reprod-repos-Vale-Junio2023.Rmd
+++ b/reprod-repos-Vale-Junio20203/reprod-repos-Vale-Junio2023.Rmd
@@ -1202,7 +1202,7 @@ signo + en cuenta Github
 ]
 
 ---
-# 3. Clonar repo
+## 3. Clonar repo
 
 .pull-left[
 - En Github: obtener dirección para clonar: code > local > clone https
@@ -1216,23 +1216,14 @@ signo + en cuenta Github
 
 
 ---
-class: roja, middle, right
-
-# Contenidos
-
-## 1. Repaso sesion anterior (git)
-## 2. Github
-## 3. .yellow[Github & RStudio]
-
----
-# 3. Clonar repo
+## 3. Clonar repo
 
 - En RStudio: File > New Project > Version Control > Git
 .center[
 ![](https://cienciasocialabierta.netlify.app/slides/09-github/Rstudio_creategit.png)]
 
 ---
-# 3. Clonar repo
+## 3. Clonar repo
 
 .pull-left[
 - pegar URL copiado en paso anterior 
